<resources>
    <string name="app_name">BootCampToDoList</string>
    <string name="create_task">Create TASK</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="task_title">Task Title</string>
    <string name="title_toolbar">Create your Task</string>
    <string name="description_new_task">New Task</string>
    <string name="task_01">Task 01</string>
    <string name="time_01">time_01</string>
    <string name="time_02">1:20</string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dotsMore">DotsMeaningMore</string>
    <string name="lb_anyTask">MAAANO, VOCÊ TEM TAREFAS HOJE !</string>
    <string name="image_lazy">Image lazy</string>
    <string name="TaskToday">Tasks Today</string>
    <string name="image_days">Image Days</string>
    <string name="lb_description">Description</string>
</resources>