<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TOOLBAR -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tlb_createtask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_toolbar"
        app:navigationIcon="@drawable/ic_navigate_back"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- LINHAS GUIA -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <!-- INPUT DE TEXTO -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tlb_createtask">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description Paused
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_box"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:hint="Task Title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/title_box">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    -->
    <!-- DATE START -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/date"
        app:startIconDrawable="@drawable/ic_calendar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/til_hour"
        app:layout_constraintTop_toBottomOf="@id/til_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/btn_set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- HOUR START -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/hour"
        app:startIconDrawable="@drawable/ic_timer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/til_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/btn_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- BOTÕES -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginBottom="16dp"
        android:text="@string/create_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginBottom="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toTopOf="@id/btn_create_task"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"/>

</androidx.constraintlayout.widget.ConstraintLayout>